# spark

./: Cargo.toml
crates/spark-cli/: Cargo.toml
crates/spark-cli/src/: main.rs
crates/spark-core/: Cargo.toml
crates/spark-core/src/: compiler.rs  context.rs  gc.rs  host.rs  interpreter.rs  lexer.rs  lib.rs  parser.rs  runtime.rs  value.rs
crates/spark-core/src/builtins/: array.rs  array_buffer.rs  async_function.rs  boolean.rs  console.rs  data_view.rs  date.rs  error.rs  function.rs  generator.rs  iterator.rs  js_builtins.rs  json.rs  map.rs  math.rs  mod.rs  module.rs  number.rs  object.rs  promise.rs  proxy.rs  reflect.rs  regexp.rs  set.rs  shared_array_buffer.rs  string.rs  symbol.rs  typed_array.rs  weakmap.rs  weakset.rs
crates/spark-core/tests/: integration.rs  test_builtins_collections.rs  test_builtins_core.rs  test_builtins_date_regexp_json.rs  test_builtins_function_proxy_reflect.rs  test_builtins_number_math.rs  test_builtins_object_array.rs  test_builtins_promise.rs  test_builtins_string.rs  test_context.rs  test_gc.rs  test_integration_extended.rs  test_value.rs
tests/: comprehensive.js
